--- a/src/pages/Admin/admin.css
+++ b/src/pages/Admin/admin.css
@@ -1,5 +1,6 @@
 .admin {
   margin: 100px 20px;
+  min-height: 100vh;
 }
 
 .adminTitle {
