--- a/src/pages/Blog/blogs.module.css
+++ b/src/pages/Blog/blogs.module.css
@@ -68,6 +68,10 @@ tbody {
     margin-right: 50px;
     margin-left: 50px;
   }
+
+  .blogContainer {
+    min-height: 100vh;
+  }
 }
 
 @media (max-width: 900px) {
@@ -76,7 +80,7 @@ tbody {
   }
 
   .blogContainer {
-    height: 100%;
+    min-height: 100vh;
   }
 
   #blogCreate {
