--- a/src/pages/Calendar/calendar.css
+++ b/src/pages/Calendar/calendar.css
@@ -10,3 +10,7 @@
   border-bottom: 1px solid rgba(5, 5, 5, 0.06) !important;
   border-radius: 0 !important;
 }
+
+.ant-select-dropdown {
+  z-index: 8;
+}
